# cs312

common/: hw222_CMidiPacket.h  hw332_CMidiPacket.cpp  hw332_CMidiPacket.h  hw413_CMidiTrack.h  hw511_CInstrument.cpp  hw511_CInstrument.h
cs312/hw32/hw322_CMP32gtest/: CMakeLists_gtest.txt  hw322_CMP32friends.cpp  hw322_CMidiPacket.cpp  hw322_CMidiPacket.h  hw322_gtests.cpp
cs312/hw41/hw411_rand_int/: hw411_main.cpp  hw411_rand_int.cpp
cs312/hw41/hw412_gmnames/: hw412_gmnames.cpp
cs312/hw41/hw413_CScalesTrack/: CMakeLists.txt  hw413_CScalesTrack.cpp  hw413_CScalesTrack.h  hw413_main.cpp
cs312/hw41/hw414_measures_beats/: CMakeLists.txt  hw414_CMeasuresBeatTrack.cpp  hw414_CMeasuresBeatTrack.h  hw414_main.cpp
cs312/hw42/c421_playSoftMidi/: c421_playSoftMidi.cpp
cs312/hw42/common/: hw222_CMidiPacket.cpp  hw322_CMidiPacket.tgz  hw411_rand_int.h  hw422_CAppleMidiSynth.cpp  hw423_CMidiTrack.cpp  hw423_CMidiTrack.h
cs312/hw42/hw421_CDelayMs/: CMakeLists.txt  hw421_CDelayMs.cpp  hw421_CDelayMs.h  hw421_main.cpp
cs312/hw42/hw422_CAppleMidiSynth/: CMakeLists.txt  hw422_CAppleMidiSynth.h  hw422_main.cpp
cs312/hw42/hw423_CScalesTrio/: CMakeLists.txt  hw423_CAltoTrack.cpp  hw423_CAltoTrack.h  hw423_CBassTrack.cpp  hw423_CBassTrack.h  hw423_CScalesTrack.cpp  hw423_CScalesTrack.h  hw423_CSopranoTrack.cpp  hw423_CSopranoTrack.h  hw423_main.cpp
cs312/hw43/hw431_drumMachine/: hw431_CDrumTrack.cpp  hw431_main.cpp
cs312/hw43/hw431_drumMachine_xcode/: CMakeLists.txt  hw431_CDrumMachine.cpp  hw431_CDrumMachine.h  hw431_CDrumTrack.cpp  hw431_CDrumTrack.h  hw431_main.cpp
cs312/hw51/c511_CInstrument/: hw511_CInstrument.h
cs312/hw51/c512_pianoChords/: CMakeLists.txt  c512_main.cpp  hw511_CBluesPianoTrack.cpp  hw511_CBluesPianoTrack.h
cs312/hw51/c513_markovChain/: CMakeLists.txt  c513_CMarkovBlues.cpp  c513_CMarkovBlues.h  c513_main.cpp
cs312/hw51/hw513_blues/: CMakeLists.txt  c513_CMarkovBlues.h  hw431_CDrumMachine.h  hw431_CDrumTrack.cpp  hw431_CDrumTrack.h  hw511_CBluesBassTrack.cpp  hw511_CBluesMelodyTrack.cpp  hw511_CBluesPianoTrack.cpp  hw511_main.cpp
cs312/hw62/c621_rt_midiprobe/: CMakeLists.txt
cs312/hw62/c622_rt_cmidiin/: CMakeLists.txt
cs312/hw62/c623_rt_midiout/: CMakeLists.txt
cs312/hw62/hw621_cmidiin_cmp33/: CMakeLists.txt  hw621_cmidiin_cmp33.cpp
cs312/hw62/hw622_midiout_cmp33/: CMakeLists.txt  hw622_midiout_cmp33.cpp
cs312/hw71/build-hw711/: Makefile
cs312/hw71/build-hw712/: Makefile  moc_mainwindow.cpp  ui_mainwindow.h
cs312/hw71/build-hw713/: Makefile  moc_mainwindow.cpp  moc_predefs.h  ui_mainwindow.h
cs312/hw71/hw712_Qt_rtmidiin/: hw712_Qt_rtmidiin.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
cs312/hw71/hw713_Qt_rtmidiin_buttons/: hw713_Qt_rtmidiin_buttons.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
cs312/hw72/hw721_gensin/: CMakeLists.txt  hw721_gensin.cpp
cs312/hw72/hw722_gensin_phasor/: CMakeLists.txt  hw722_gensin_phasor.cpp
cs312/hw72/hw723_gensin_beatDemo/: CMakeLists.txt  hw723_gensin_beatDemo.cpp
cs312/hw72/hw724_gensin_ringmod/: CMakeLists.txt  hw724_gensin_ringmod.cpp
cs312/hw72/hw725_gensin_ammod/: CMakeLists.txt  hw725_gensin_ammod.cpp
cs312/hw72/hw726_gensin_fmmod/: CMakeLists.txt  hw726_gensin_fmmod.cpp
cs312/hw73/hw731_playsaw/: CMakeLists.txt
cs312/hw73/hw732_playsine/: CMakeLists.txt  hw732_playsine.cpp
cs312/hw73/hw733_playsine_rta/: CMakeLists.txt  hw733_playsine_rta.cpp
cs312/hw73/hw735_qtplaysine_midi2freq/: hw735_qtplaysine_midi2freq.pro  mainwindow.cpp  mainwindow.h  (+1 more)
(+33 files in other folders)
